Fixed vertical alignment of popup

--- a/css/components/_popup.scss
+++ b/css/components/_popup.scss
@@ -13,7 +13,6 @@
     transform: translateY(100%);
     pointer-events: none;
     @include atMedium {
-        position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -60%);
