--- a/css/main.css
+++ b/css/main.css
@@ -717,7 +717,6 @@ li {
   pointer-events: none; }
   @media screen and (min-width: 768px) {
     .popup {
-      position: absolute;
       top: 50%;
       left: 50%;
       -webkit-transform: translate(-50%, -60%);
